--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
     ]
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "babel lib/ -d dist/node/ && webpack && node-sass --output ./dist/ ./lib/style.scss",
-    "start": "webpack-dev-server --open"
+    "lint": "eslint lib/ test/",
+    "start": "webpack-dev-server --open",
+    "test": "karma start ./test/karma.conf.js --single-run",
+    "test-watch": "karma start ./test/karma.conf.js --log-level debug",
+    "prepublish": "npm run build",
+    "prebuild": "npm run test",
+    "pretest": "npm run lint"
   },
   "author": "Jon Hartman",
   "license": "MIT",
@@ -34,9 +39,21 @@
     "babel-cli": "6.24.0",
     "babel-loader": "6.4.1",
     "babel-preset-es2015": "6.24.0",
+    "chai": "3.5.0",
     "eslint": "3.18.0",
+    "istanbul-instrumenter-loader": "^2.0.0",
+    "karma": "1.5.0",
+    "karma-chrome-launcher": "2.0.0",
+    "karma-coverage": "^1.1.1",
+    "karma-firefox-launcher": "1.0.1",
+    "karma-ie-launcher": "1.0.0",
+    "karma-mocha": "1.3.0",
+    "karma-mocha-reporter": "2.2.3",
+    "karma-webpack": "2.0.3",
     "lodash": "4.17.4",
+    "mocha": "3.2.0",
     "node-sass": "4.5.1",
+    "sinon": "2.1.0",
     "webpack": "2.2.1",
     "webpack-dev-server": "2.4.2"
   }
