--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "prepublish": "npm run build",
     "prebuild": "npm run test",
     "pretest": "npm run lint",
-    "preversion": "npm test",
-    "version": "npm run build && git add -A dist",
+    "preversion": "npm run build",
+    "version": "git add -A dist",
     "postversion": "git push && git push --tags"
   },
   "author": "Jon Hartman",
