--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "karma-ie-launcher": "1.0.0",
     "karma-mocha": "1.3.0",
     "karma-mocha-reporter": "2.2.3",
+    "karma-sauce-launcher": "1.1.0",
     "karma-webpack": "2.0.3",
     "lodash": "4.17.4",
     "mocha": "3.2.0",
