--- a/package.json
+++ b/package.json
@@ -48,13 +48,13 @@
     "eslint-cli": "1.1.0",
     "istanbul-instrumenter-loader": "2.0.0",
     "karma": "1.5.0",
+    "karma-browserstack-launcher": "1.2.0",
     "karma-chrome-launcher": "2.0.0",
     "karma-coverage": "1.1.1",
     "karma-firefox-launcher": "1.0.1",
     "karma-ie-launcher": "1.0.0",
     "karma-mocha": "1.3.0",
     "karma-mocha-reporter": "2.2.3",
-    "karma-sauce-launcher": "1.1.0",
     "karma-webpack": "2.0.3",
     "lodash": "4.17.4",
     "mocha": "3.2.0",
