Squashed commit of the following:
commit 77eb735890e66578e94c6943ff9fb24875e9e30a
Author: Jonathan Hartman <jhartman86@gmail.com>
Date:   Tue Apr 4 01:52:05 2017 -0600

    Switched SauceLabs -> Browserstack

commit a81909036fe7c0a5168cfdbe8527e60ec69f448a
Author: Jonathan Hartman <jhartman86@gmail.com>
Date:   Tue Apr 4 00:59:51 2017 -0600

    Use TRAVIS_JOB_NUMBER as tunnelIdentifier

commit 65f837bc6e141a312d3cc0c085de88f8202e4ca3
Author: Jonathan Hartman <jhartman86@gmail.com>
Date:   Tue Apr 4 00:45:42 2017 -0600

    More sauceLabs connection fun

commit f8274b48454c6e5f2a4580b22776b4600b9ad3d0
Author: Jonathan Hartman <jhartman86@gmail.com>
Date:   Tue Apr 4 00:41:23 2017 -0600

    SauceLabs... again :(

commit d47520403d21caf8a7ad052c19c8e18f219d80fb
Author: Jonathan Hartman <jhartman86@gmail.com>
Date:   Tue Apr 4 00:36:33 2017 -0600

    SauceLabs connection bugs

commit 51883a26332018b34db46c5b96157b81b8b987c7
Author: Jonathan Hartman <jhartman86@gmail.com>
Date:   Tue Apr 4 00:23:58 2017 -0600

    SauceLabs connection issues

commit be5cf56690f8206eb964a1b558117185dff46755
Author: Jonathan Hartman <jhartman86@gmail.com>
Date:   Tue Apr 4 00:08:19 2017 -0600

    object.assign polyfill and IE10/edge tests

commit 7edaab953103648e39292990b35a49fb21883f64
Author: Jonathan Hartman <jhartman86@gmail.com>
Date:   Mon Apr 3 19:36:04 2017 -0600

    Integrated saucelabs for IE testing; Karma updates

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,16 @@ language: node_js
 
 node_js:
   - "6"
-  - "7"
+
+addons:
+  browserstack:
+    username: "jonhartman2"
+    access_key:
+      secure: "Y25gF1mxxXleGQIahHBj23D+Su9a5rxuBwpg9cCfnka2WmQ1kI6klTao795cxYh/LJYtHXSDlRjbQfHj6UHwX07vfBBqsUQyRNq/ck1dt53LeEd22iJIVIFu9FKNJTjIgFrw07t6DySdX2
+OM0bi8y4dGVsUlPmaD9pSYXY9PSlC1qdbJacKPe9zc0YH826VMZ3dtV+G7KLrLs620QC/Qqz7DmjN2X1LX4EhLPMV3ITd8sUWKVNqYizZ8yr/hqsreclqJafbP9QdXAAc3adLVW/cpi0UUqWPmPGb5ERh
+w+1njmhN6Ymu6GeKJmi+WGeWQTSI7sAyDA9DpJWqcOCIBTuI0JPFeAqCZyw/3tnmEwoOCNbOxlfPCoc/TuVFY/iMBzQnJDpWOZ+rWluq3IiiQ2dagK0T75u8LSX6C/xg7tFffCGSCy/eRxT7S7UgIP+Fo
+am+FQhl6BVSU2SixpiMK3XLACy6Ac1EkVrFFrn84Yp7YBjrHzTQ7XYMWn8qnNWwjiu3HTKYin1/V5R1vlinI0fAW6bKvQoqeTxdQinkEMa3ge9GCmWTBlV/Yx96NSZrjVPg3Af6aj+0IsY8QxnTKFChvB
+9Aon4ktJj47YOS+gfuMAcm5xJW/UpNijnU8Ij85HUgEWczVM2/kqIO7IdzazESXRShVHYaDYOZ20ioS4Fc="
 
 before_install:
   - export CHROME_BIN=/usr/bin/google-chrome
