--- a/package.json
+++ b/package.json
@@ -45,10 +45,12 @@
     "babel-preset-es2015": "6.24.0",
     "chai": "3.5.0",
     "eslint": "3.18.0",
-    "istanbul-instrumenter-loader": "^2.0.0",
+    "eslint-cli": "1.1.0",
+    "istanbul-instrumenter-loader": "2.0.0",
     "karma": "1.5.0",
+    "karma-browserstack-launcher": "1.2.0",
     "karma-chrome-launcher": "2.0.0",
-    "karma-coverage": "^1.1.1",
+    "karma-coverage": "1.1.1",
     "karma-firefox-launcher": "1.0.1",
     "karma-ie-launcher": "1.0.0",
     "karma-mocha": "1.3.0",
