--- a/package.json
+++ b/package.json
@@ -17,14 +17,12 @@
     "copy-build-assets": "cp ./dist/bundled.min.js ./docs/ && cp ./dist/style.css ./docs/",
     "lint": "eslint lib/ test/",
     "start": "webpack-dev-server --open",
-    "test": "karma start ./test/karma.conf.js --single-run",
-    "test-watch": "karma start ./test/karma.conf.js --log-level debug",
-    "prepublish": "npm run build",
-    "prebuild": "npm run test",
     "pretest": "npm run lint",
-    "preversion": "npm run build",
-    "version": "git add -A dist",
-    "postversion": "git push && git push --tags"
+    "test": "karma start ./test/karma.conf.js --single-run",
+    "test-watch": "NODE_ENV=test_watch karma start ./test/karma.conf.js --log-level debug",
+    "preversion": "npm run test && npm run build",
+    "postversion": "git push && git push --tags",
+    "release-patch": "npm version patch && npm publish"
   },
   "author": "Jon Hartman",
   "license": "MIT",
